# rusted_pipe_examples

./: .gitattributes  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
car_plates_detector/: Cargo.toml  README.md  rtp_output.sdp
car_plates_detector/graphs/: cars.dot
car_plates_detector/models/: alphabet_36.txt  licence.traineddata  plate_best.onnx  yolov3.cfg
car_plates_detector/src/config/: prometheus.yaml
car_plates_detector/src/plate_detection/: bounding_box_render.rs  car_detector.rs  dnn_ocr.rs  mod.rs  object_detector.rs  rtp_sink.rs  video_reader.rs
src/: lib.rs  registry.rs
src/plate_detection/: bounding_box_render.rs  car_detector.rs  dnn_ocr.rs  mod.rs  rtp_sink.rs  test_nodes.rs  video_reader.rs
your_first_pipeline/: Cargo.toml  README.md
your_first_pipeline/src/: lib.rs  utils.rs
