[package]
name = "rusted_pipe_examples"
version = "0.1.0"
authors = ["Simone Zandara <simone.zandara@gmail.com>"]
edition = "2021"

[lib]
name = "rusted_pipe_examples"
path = "src/lib.rs"

[dependencies]
opencv = "0.75"
leptess = "0.13.2"
rusted_pipe = { path = "/opt/rusted_pipe/" }
crossbeam = {version = "0.8.1"}
spin_sleep = { version = "^1.1.1" }
gstreamer = "^0.20.0"
gstreamer-app = "^0.20.0"
gstreamer-video = "^0.20.0"