[package]
name = "car_plates_detector"
version = "0.1.0"
authors = ["Simone Zandara <simone.zandara@gmail.com>"]
edition = "2021"

[lib]
name = "car_plates_detector"
path = "src/lib.rs"

[dependencies]
opencv = { version = "0.81.5", features = ["clang-runtime"]}
leptess = "0.14.0"
tesseract-plumbing = "0.8.0"
rusted_pipe = { path = "../../rusted_pipe/" }
crossbeam = {version = "0.8.1"}
spin_sleep = { version = "^1.1.1" }
gstreamer = "^0.20.0"
gstreamer-app = "^0.20.0"
gstreamer-video = "^0.20.0"
lazy_static = "^1.4.0"
pyroscope = "0.5.4"
pyroscope_pprofrs = "0.2"
prometheus = "^0.13.3"