[package]
name = "your_first_pipeline"
version = "0.1.0"
authors = ["Simone Zandara <simone.zandara@gmail.com>"]
edition = "2021"

[lib]
name = "your_first_pipeline"
path = "src/lib.rs"

[dependencies]
opencv = "0.75"
rusted_pipe =  { git = "https://github.com/szandara/rusted_pipe.git", tag = "0.0.1" }
crossbeam = {version = "0.8.1"}
spin_sleep = { version = "^1.1.1" }
gstreamer = "^0.20.0"
gstreamer-app = "^0.20.0"
gstreamer-video = "^0.20.0"
pyroscope = "0.5.4"
pyroscope_pprofrs = "0.2"